updated index.html to and create style.css
the above descrive it very well

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<div>Hellow</div>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="Author" content="Eyosiyas" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learn git and github</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div>hello</div>
+  </body>
+</html>
